src/components/StoryIcon/StoryIcon.scss
   .storieIcon{     
        display: block;
        width: 100%;
        aspect-ratio: 1/1;
        container-type: inline-size;
        container-name: storieIcon;
        position: relative;

        &::after{
            content: '';
            display: block;
            border: 4px solid var(--nothing-background-color);
            border-radius: 100%;
            position: absolute;
            top: -1px;
            left: -1px;
            right: -1px;
            bottom: -1px;
            z-index: 10;

            @container storieIcon (min-width: 48px) {
                // border: 4px solid red;
            }

            @container storieIcon (max-width: 24px) {
                display: none;
            }
        }

        .storieIcon__blurImage_border{
            display: block;
            content: '';
            // background-image: linear-gradient(to bottom, #3acfd5 0%, #3a4ed5 100%);
            top: -5px;
            left: -5px;
            bottom: -5px;
            right: -5px;
            position: absolute;
            border-radius: 100%;
            z-index: -1;
            pointer-events: none;
            // -webkit-animation:spin 4s linear infinite;
            // -moz-animation:spin 4s linear infinite;
            // animation:spin 4s linear infinite;

            @container storieIcon (max-width: 48px) {
                top: -3px;
                left: -3px;
                bottom: -3px;
                right: -3px;
            }

            @container storieIcon (max-width: 24px) {
                display: none;
            }
        }
        
        .storieIcon__blurImage_container {
            height: 100%;
            width: 100%;
            border-radius: 100%;
            overflow: hidden;
            position: relative;
            z-index: 10;
        }

        .storieIcon__BlurImage{
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;
            right: 0;
            filter: blur(1px);
            -webkit-filter: blur(1px);
            background-color: rgb(161, 161, 161);
        }
    }

    .noBorder{        
        &::after, &::before{
            display: none;
        }
    }

    @-moz-keyframes spin { 
        100% { -moz-transform: rotate(360deg); } 
    }
    @-webkit-keyframes spin { 
        100% { -webkit-transform: rotate(360deg); } 
    }
    @keyframes spin { 
        100% { 
            -webkit-transform: rotate(360deg); 
            transform:rotate(360deg); 
        } 
    }

